--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <script src="script.js" defer ></script>
 </head>
 <body>
-    
+    <div class="board x" id="board">
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        
+    </div>
+    <div>
+        <div class="display-result">
+            <div class="winning-text">X Wins!</div>
+            <button id="restartBtn">Restart</button>
+        </div>
+    </div>
 </body>
 </html>
