--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
     <script src="script.js" defer ></script>
 </head>
 <body>
-    <div class="board x" id="board">
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        
-    </div>
+    <main>
+        <div class="players">
+            <div class="player1">
+                <p>Player 1</p>
+                <div class="score1">0</div>
+            </div>
+            <div class="player2">
+                <p>Player 2</p>
+                <div class="score2">0</div>
+            </div>
+        </div>
+        <div class="board x" id="board">
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+            <div class="cell" data-cell></div>
+        </div>
+    </main>
     <div>
-        <div class="display-result">
+        <div class="display-result show">
             <div class="winning-text">X Wins!</div>
             <button id="restartBtn">Restart</button>
         </div>
