--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="script.js" defer ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1><span>T</span>i<span>c</span>-<span>T</span>a<span>c</span>-<span>T</span>o<span>e</span></h1>
     <main>
         <div class="players">
             <div class="player1">
@@ -35,7 +39,7 @@
     </main>
     <div>
         <div class="display-result show">
-            <div class="winning-text">X Wins!</div>
+            <div class="winning-text"></div>
             <button id="restartBtn">Restart</button>
         </div>
     </div>
